--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,18 @@ go.work.sum
 
 # env file
 .env
+.env.*
+!.env.example
+
+# Frontend
+frontend/node_modules
+frontend/dist
+
+# Terraform
+infra/terraform/.terraform
+infra/terraform/*.tfstate
+infra/terraform/*.tfstate.*
+infra/terraform/.terraform.lock.hcl
 
 # Editor/IDE
 # .idea/
